# Previous-Projects

ALG/: cloud_test.py  datacollector.py  pseudo_code.txt
C++Projects/: Description.doc
C++Projects/FinalProject_JunjieFeng 2/FinalProject_JunjieFeng/: CMakeLists.txt
C++Projects/FinalProject_JunjieFeng 2/FinalProject_JunjieFeng/Debug/: FinalProject.ilk
C++Projects/FinalProject_JunjieFeng 2/FinalProject_JunjieFeng/FinalProject/: Account_JunjieFeng.h  FinalProject.vcxproj.filters  StockAccount_JunjieFeng.cpp  StockAccount_JunjieFeng.h  bank_transaction_history.txt  cash_balance.txt  portfolio_value_history.txt  stock_account_infromation.txt  stock_transaction_history.txt
C++Projects/FinalProject_JunjieFeng 2/FinalProject_JunjieFeng/FinalProject/Debug/: vc140.idb
C++Projects/FinalProject_JunjieFeng 2/FinalProject_JunjieFeng/FinalProject/Debug/FinalProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FinalProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
C++Projects/Homework-9/Homework-9/: CMakeLists.txt  Display_JunjieFeng.cpp  Homework-9.vcxproj  Homework-9.vcxproj.filters  Main_JunjieFeng.cpp  OvernightPackage_JunjieFeng.cpp  OvernightPackage_JunjieFeng.h  Package_JunjieFeng.cpp  Package_JunjieFeng.h  TwoDayPackage_JunjieFeng.cpp  TwoDayPackage_JunjieFeng.h
C++Projects/Homework-9/Homework-9/Debug/: vc140.idb
C++Projects/Homework-9/Homework-9/Debug/Homework-9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Homework-9.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+504 files in other folders)
